- If you hid a Navi with a fade and then tried to show the Navi without a fade, auto-updated Navis will not be visible because the texture wasn't updated (it would still have 0% opacity). This has been resolved.

Current Version: NaviLibrary v1.3

API Changes since v1.2:
- In NaviManager:
-- NaviManager::bindNaviData has been added
-- NaviManager::unbindNaviData has been added
-- NaviManager::hideNavi has been added
-- NaviManager::showNavi has been added
-- NaviManager::getNaviVisibility has been added
-- NaviManager::createNavi and createNaviMaterial have been extended, a new parameter 'isVisible'
-- NaviManager::createNavi has been refactored to use a unified NaviPosition object
- In NaviData:
-- NaviData::add has been extended for wide-string support
-- NaviData::get has been extended for wide-string support
- In NaviUtilities:
-- NaviUtilities::encodeURIComponent has been added
-- NaviUtilities::decodeURIComponent has been added
-- NaviUtilities::toWide has been added
-- NaviUtilities::toMultibyte has been added
-- NaviUtilities::setLocale has been added
- In Navi.js:
-- Navi.js::NaviData::addQS has been added
-- Navi.js::NaviData add(), addQS(), send() now return a reference to the NaviData object itself, thus you can do chaining (new NaviData('whatever').add('something', 'value').send())
-- Navi.js::decode()/encode() have been removed because now we use encodeURIComponent()/decodeURIComponent() natively

Core Changes since v1.2:
- Callbacks via a delegate has been added thanks to freely available 'FastDelegate' code, (see NaviDelegate.h for more info)
- Fading via hideNavi/showNavi has been implemented. The fading algorithm respects 'maxUpdatesPS' and also does not invoke needless Gecko draw calls. You can set a duration for the fade (in milliseconds) as well.