@@ -19,6 +19,7 @@ Bugfixes since v1.3:
 - There was a memory read exception on certain systems due to assumptions about bit depths, this has been resolved.
 - Occasionally there are assertions when exiting an application in debug-mode (Gecko bug 339504). Clearing the cache before shutting down seems to help in certain situations. This was contributed by 'Lord LoriK'.
 - If you hid a Navi with a fade and then tried to show the Navi without a fade, auto-updated Navis will not be visible because the texture wasn't updated (it would still have 0% opacity). This has been resolved.
+- There was a conflict with madmark's contribution, specifically superfluous width offsets being calculated that offset the blitting of non-POT sizes enough to malform them and cause several memory read exceptions. This has been resolved and additionally allows users to use arbitrary sizes for their Navis (only possible on NPOT videocards).
 
 Current Version: NaviLibrary v1.3
 
